--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -10,8 +10,7 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
-
-    - name: Deploy to App Engine
+    - name: Deploy to App Engine. 
       id: deploy
       uses: google-github-actions/deploy-appengine@v0.2.0
       with:
