--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -2,19 +2,16 @@
 name: Deploy App Engine
 
 on:
-  pull_request:
-    types:
-      - closed
+  push
+
 jobs:
-  if_merged:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
+  job_id:
     steps:
-    - name: Deploy to App Engine. 
-      id: deploy
-      uses: google-github-actions/deploy-appengine@v0.2.0
-      with:
-        project_id: ${{secrets.PROYECT_ID}}
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
+
+    - name: 'Use gcloud CLI'
+      run: 'gcloud info'
 
 
         
