--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -9,8 +9,8 @@ jobs:
   - id: 'auth'
   uses: 'google-github-actions/auth@v1'
   with:
-    workload_identity_provider: 'projects/830746747943/locations/global/workloadIdentityPools/github-wif-pool/*'
-    service_account: '  '
+    workload_identity_provider: ${{secret.WORKLOAD}}
+    service_account: ${{secret.service_account}}
 
 
   if_merged:
