--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -6,6 +6,7 @@ on:
     types:
       - closed
 jobs:
+  - uses: 'actions/checkout@v3'
   - name: Auth
     uses: 'google-github-actions/auth@v1'
     with:
